--- a/.config/xfce4/panel/whiskermenu-1.rc
+++ b/.config/xfce4/panel/whiskermenu-1.rc
@@ -1,5 +1,5 @@
 favorites=xfce4-web-browser.desktop,xfce4-mail-reader.desktop,xfce4-file-manager.desktop,xfce4-terminal-emulator.desktop
-recent=audacious.desktop,android-file-transfer.desktop,Zoom.desktop,system-config-printer.desktop,cups.desktop,hplip.desktop,firefox.desktop,xfce4-power-manager-settings.desktop,xfce4-taskmanager.desktop,xfce-backdrop-settings.desktop
+recent=system-config-printer.desktop,audacious.desktop,android-file-transfer.desktop,Zoom.desktop,cups.desktop,hplip.desktop,firefox.desktop,xfce4-power-manager-settings.desktop,xfce4-taskmanager.desktop,xfce-backdrop-settings.desktop
 button-icon=xfce4-whiskermenu
 button-single-row=true
 show-button-title=false
